# surrealdb.py

./: .roomodes  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: build-and-publish.yml  release-please.yml  stability.yml  tests.yml  validate-release.yml
.roo/: coconut-github-issue-generator  system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug  system-prompt-flow-orchestrator  system_prompt.md
docs/: docusaurus.config.ts  orm-architecture-design.md  orm-implementation-plan.md  orm-logger-dev-friendly.md  orm-logger-usage.md  sidebars.ts
docs/docs/: contributing.md  getting-started.md  installation.md  quick-start.md  troubleshooting.md
docs/docs/api/: connections.md
docs/docs/authentication/: _category_.json  auth0.md  basic-auth.md  custom-scopes.md  github-sso.md  jwt-auth.md  overview.md
docs/docs/connections/: async-vs-sync.md  http.md  overview.md  websocket.md
examples/: transaction_example.py
samples/chat-gpt/: .env.example  Dockerfile  README.md  chat_service.py  config.py  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
samples/chat-gpt/routers/: chat.py
samples/fastapi-auth-example/: .env.example  Dockerfile  README.md  auth.py  config.py  crud.py  database.py  dependencies.py  docker-compose.yml  logger.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  schemas.py  test_app.py
samples/fastapi-auth-example/routers/: auth.py  profiles.py  users.py
src/surrealdb/: __init__.py
(+46 files in other folders)
