[project]
name = "fastapi-auth-example"
version = "1.0.0"
description = "A complete FastAPI authentication and CRUD example using SurrealDB"
authors = [
    {name = "FastAPI Auth Example", email = "example@example.com"}
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "email-validator==2.2.0",
    "pydantic[email]==2.10.4",
    "surrealdb==0.3.2",
    "python-dotenv==1.0.0",
    "loguru==0.7.2",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []